# conan-issue-16916

app/: CMakeLists.txt  conanfile.txt  main.cpp
lib/: CMakeLists.txt  conanfile.py
lib/cmake_build_modules/: add_visualizers.cmake
lib/include/my/: lib.hpp
lib/visualizers/my/: lib.natvis
